src/test/resources/tokens/invalid/double_out_of_bounds.unpick
unpick v3
const double
    0 = 1.7976931348623159E308